# raworc-mcpserver

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md  TESTING.md  install.ps1  install.sh  package.json
examples/: claude-desktop-config.json  test-installation.js  usage-example.md
scripts/: postinstall.js
src/: client.rs  error.rs  lib.rs  main.rs  mcp.rs  models.rs  server.rs
tests/: integration_test.rs
