[package]
name = "raworc-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Model Context Protocol server for Raworc - Production-ready MCP server for Raworc cloud platform"
license = "MIT"
repository = "https://github.com/yourusername/raworc-mcp"
keywords = ["mcp", "raworc", "ai", "agent", "model-context-protocol"]
categories = ["api-bindings", "development-tools", "command-line-utilities"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.0"
base64 = "0.21"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"

[[bin]]
name = "raworc-mcp"
path = "src/main.rs"

[lib]
name = "raworc_mcp"
path = "src/lib.rs"
